@@ -119,6 +119,8 @@ sub tst_rgr {
     # 472 (for library 4.7.2)
     # 473 (for library 4.7.3)
     # 474 (for library 4.7.4)
+    # 480 (for library 4.8.0)
+    # 481 (for library 4.8.1)
 
   if($exit_value == 410){print "netCDF version 4.1.x detected\n";}
   if($exit_value == 431){print "netCDF version 4.3.1 detected\n";}
@@ -138,6 +140,8 @@ sub tst_rgr {
   if($exit_value == 472){print "netCDF version 4.7.2 detected\n";}
   if($exit_value == 473){print "netCDF version 4.7.3 detected\n";}
   if($exit_value == 474){print "netCDF version 4.7.4 detected\n";}
+  if($exit_value == 480){print "netCDF version 4.8.0 detected\n";}
+  if($exit_value == 481){print "netCDF version 4.8.1 detected\n";}
 
   if($exit_value >= 400){$RUN_NETCDF4_TESTS=1;}
   if($exit_value >= 431){$RUN_NETCDF4_TESTS_VERSION_GE_431=1;}
